<!--
 Kintrol: Remote control app for LINN(R) KINOS(TM), KISTO(TM) and
 Klimax Kontrol(TM) system controllers.
 Copyright (C) 2015-2018 Oliver Götz

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License version 3.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Kintrol</string>

    <string name="device_choser_title">Chose device</string>
    <string name="title_activity_device_control">Kintrol</string>
    <string name="action_add_device">Add device</string>
    <string name="action_delete_device">Delete device</string>
    <string name="action_edit_device">Edit device</string>
    <string name="action_show_device_info">Show device info</string>

    <string name="volume_header">Volume</string>
    <string name="volume_down">-</string>
    <string name="volume_up">+</string>
    <string name="device_name">Device</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="source_title">Source</string>
    <string name="source_down">Src-</string>
    <string name="source_up">Src+</string>
    <string name="mute">Mute</string>

    <string name="edit_device_type">Device type</string>
    <string name="kinos">Kinos</string>
    <string name="kisto">Kisto</string>
    <string name="klimax_kontrol">Klimax Kontrol</string>
    <string name="edit_device_name">Device name</string>
    <string name="edit_ip_address">IP address</string>
    <string name="edit_port">Port (optional)</string>
    <string name="edit_discrete_volume">Discrete Volume Value (optional)</string>
    <string name="edit_probe_cycle_millis">Probe cycle millis (optional)</string>
    <string name="edit_reconnect_delay_millis">Reconnect delay millis (optional)</string>
    <string name="app_descrip">
        <![CDATA[
        Remote control app for LINN&reg; KINOS&trade;, KISTO&trade; and Klimax Kontrol&trade; system controllers.<br>
        ]]></string>
    <string name="app_credits">
    <![CDATA[
    &copy; 2015-2018 Oliver Götz<br>
    App icon designed by Mr. Truesound<p>
    This program is free software: you can redistribute it and/or modify
    it under the terms of the <a href="http://www.gnu.org/licenses/gpl.html">GNU General Public
    License version 3</a> as published by the Free Software Foundation.
    Find the project sources at <a href="https://github.com/Geekgasm/kintrol">GitHub</a><p>
    Please send your feedback to <a href="mailto:developer@geekgasm.eu">developer@geekgasm.eu</a>
    ]]></string>
    <string name="action_about_kintrol">About Kintrol</string>
    <string name="surround_mode_title">Surround Mode</string>
    <string name="surround_mode_prev">-</string>
    <string name="surround_mode_next">+</string>

</resources>
