<!--
 Kintrol: Remote control app for LINN(R) KINOS(TM), KISTO(TM) and
 Klimax Kontrol(TM) system controllers.
 Copyright (C) 2015-2018 Oliver Götz

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License version 3.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.geekgasm.kintrol.DeviceChooserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/device_type_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/device_type_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_device_type"
                />
            <RadioButton android:id="@+id/radio_kinos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kinos"/>
            <RadioButton android:id="@+id/radio_kisto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kisto"/>
            <RadioButton android:id="@+id/radio_klimax_kontrol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/klimax_kontrol"/>
        </RadioGroup>

        <EditText
            android:id="@+id/edit_device_name"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_device_name" />

        <EditText
            android:id="@+id/edit_ip_address"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:hint="@string/edit_ip_address" />

        <EditText
            android:id="@+id/edit_port"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:hint="@string/edit_port" />

        <EditText
            android:id="@+id/edit_discrete_volume"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789"
            android:hint="@string/edit_discrete_volume" />
    </LinearLayout>
</FrameLayout>
