<!--
 Kintrol: Remote control app for LINN(R) KINOS(TM) and KISTO(TM) system controllers.
 Copyright (C) 2015 Oliver Götz

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License version 3.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.geekgasm.kintrol.DeviceControlActivity">
    <item
        android:id="@+id/action_edit_device"
        android:title="@string/action_edit_device"
        android:orderInCategory="100"
        android:onClick="openEditDeviceDialog"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_device"
        android:title="@string/action_delete_device"
        android:orderInCategory="100"
        android:onClick="openDeleteDeviceDialog"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_device_info"
        android:title="@string/action_show_device_info"
        android:orderInCategory="100"
        android:onClick="openShowDeviceInfoDialog"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_kintrol"
        android:orderInCategory="100"
        android:title="@string/action_about_kintrol"
        android:onClick="showAbout"
        app:showAsAction="never" />
</menu>
